objects/DealerGeneral__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Default_Owner_of_Opportunities_Id__c</fullName>
        <description>This is the Salesforce Id of a User or Queue specific to the Org that will get the ownership of a converted Opportunity where the Dealer does not have a Res Opp Recipient Primary value.</description>
        <inlineHelpText>This is the Salesforce Id of a User or Queue specific to the Org that will get the ownership of a converted Opportunity where the Dealer does not have a Res Opp Recipient Primary value.</inlineHelpText>
        <label>Default Owner of Opportunities (Id)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Radius__c</fullName>
        <description>This field is used by the LocationService class to get a value for the Default Radius for Case 00407201</description>
        <label>Default Radius</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Address_For_ALR_Alerts__c</fullName>
        <description>This is the email address for communicating problems or information during the Automatic Lead Assignment process.</description>
        <inlineHelpText>This is the email address for communicating problems or information during the Automatic Lead Assignment process.</inlineHelpText>
        <label>Email Address For ALR Alerts</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enable_ALR_Dealer_Scoring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked then the ALR Dealer Scoring process is active.</description>
        <inlineHelpText>If checked then the ALR Dealer Scoring process is active.</inlineHelpText>
        <label>Enable ALR Dealer Scoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_ALR_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked then the ALR process of Auto Conversion and Auto Dealer Assignment is active.</description>
        <inlineHelpText>If checked then the ALR process of Auto Conversion and Auto Dealer Assignment is active.</inlineHelpText>
        <label>Enable ALR Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enforce_Agreement_Check_Dealer_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is Checked then when searching for Dealers then the ECHO agreement check will be enforced. This means that the Dealer would have had to sign  a Partner Agreement with a name of something like &apos;Lead Handling Policy Agreement&apos;.</description>
        <inlineHelpText>If this is Checked then when searching for Dealers then the ECHO agreement check will be enforced. This means that the Dealer would have had to sign  a Partner Agreement with a name of something like &apos;Lead Handling Policy Agreement&apos;.</inlineHelpText>
        <label>Enforce Agreement Check (Dealer Search)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Client_Id_Maps__c</fullName>
        <description>Assigned by Google for accessing their Google Maps API for Business</description>
        <inlineHelpText>Assigned by Google for accessing their Google Maps API for Business</inlineHelpText>
        <label>Google Client Id (Maps)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Private_key_Maps__c</fullName>
        <description>Assigned by Google for accessing their Google Maps API for Business</description>
        <inlineHelpText>Assigned by Google for accessing their Google Maps API for Business</inlineHelpText>
        <label>Google Private key (Maps)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_N_DAYS__c</fullName>
        <description>Created for case 00790008</description>
        <label>LAST_N_DAYS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Test_First_Name__c</fullName>
        <description>If the Lead record was a test record then this is what would be its first name.</description>
        <inlineHelpText>If the Lead record was a test record then this is what would be its first name.</inlineHelpText>
        <label>Lead Test First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterDealerPriority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the value is true then Master Dealer will get priority to receive the Lead and if the value is false Master Dealer will not get the Priority during Lead routing.</description>
        <inlineHelpText>If the value is true then Master Dealer will get priority to receive the Lead and if the value is false Master Dealer will not get the Priority during Lead routing.</inlineHelpText>
        <label>MasterDealerPriority</label>
        <type>Checkbox</type>
    </fields>
    <label>Dealer General</label>
</CustomObject>